# openrgb-rs

./: Cargo.toml
examples/: command.rs  command_group.rs  connect.rs  controllers.rs  profiles.rs
src/: client.rs  error.rs  lib.rs  tests.rs  wrapper.rs
src/client/: command.rs  controller.rs  group.rs  mod.rs  segment.rs  zone.rs
src/data/: color.rs  mod.rs
src/data/implement/: array.rs  mod.rs  primitive.rs  string.rs  tuple.rs  vec.rs
src/data/openrgb/: color_mode.rs  controller.rs  device_type.rs  direction.rs  led.rs  mod.rs  mode.rs  mode_flag.rs  segment.rs  zone.rs  zone_type.rs
src/protocol/: client.rs  deserialize.rs  mod.rs  packet.rs  serialize.rs  stream.rs  stream2.rs  tests.rs
src/protocol/data/: color.rs  mod.rs  protocol_option.rs
src/protocol/data/implement/: array.rs  flags.rs  mod.rs  primitive.rs  slice.rs  string.rs  tuple.rs  vec.rs
src/protocol/data/openrgb/: color_mode.rs  controller.rs  device_type.rs  direction.rs  led.rs  mod.rs  mode.rs  mode_flag.rs  plugin.rs  segment.rs  zone.rs  zone_type.rs
