[package]
name = "openrgb"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Julien Nicoulaud <julien.nicoulaud@gmail.com>"]
description = "OpenRGB SDK client"
documentation = "https://docs.rs/openrgb"
homepage = "https://github.com/nicoulaj/openrgb-rs"
repository = "https://github.com/nicoulaj/openrgb-rs"
license = "GPL-2.0"
keywords = ["RGB", "LED", "gaming"]
categories = ["network-programming", "game-development"]

[dependencies]
array2d = "0.3.2"
async-trait = "0.1.53"
flagset = "0.4.3"
rgb = "0.8.32"
thiserror = "2.0.12"
tokio = { version = "1.18.2", default-features = false, features = ["rt-multi-thread", "net", "sync", "io-util"] }
tracing = "0.1.41"

[dev-dependencies]
log = "0.4.1"
simplelog = "0.12.0"
tokio-test = "0.4.2"
tokio = { version = "1.18.2", default-features = false, features = ["macros"] }
tracing-test = "0.2.5"
